--- a/scss/utilities/_display.scss
+++ b/scss/utilities/_display.scss
@@ -1,9 +1,5 @@
 // stylelint-disable declaration-no-important
 
-//
-// Utilities for common `display` values
-//
-
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
@@ -11,5 +7,11 @@
     @each $value in $displays {
       .d#{$infix}-#{$value} { display: $value !important; }
     }
+  }
+}
+
+@media print {
+  @each $value in $displays {
+    .d-print-#{$value} { display: $value !important; }
   }
 }
